# fingerprint-proxy

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.local.yml
config/: example.toml
config/examples/: bootstrap-direct-bind.toml  bootstrap-inherited-systemd.toml  domain-basic.toml
crates/bootstrap-config/: Cargo.toml  README.md
crates/bootstrap-config/src/: api_provider.rs  certificates.rs  config.rs  db_provider.rs  domain_provider.rs  env_provider.rs  file_provider.rs  lib.rs  provider.rs  validation.rs  version_retrieval.rs  versioning.rs
crates/bootstrap-config/src/dynamic/: atomic_update.rs  cert_validation.rs  logging.rs  mod.rs  polling.rs  retrieval.rs  rollback.rs  upstream_check.rs  validation.rs  version_check.rs
crates/bootstrap-config/tests/: certificates_loading.rs  config_format.rs  config_provider.rs  domain_provider.rs  dynamic_atomic_update.rs  dynamic_cert_validation.rs  dynamic_logging.rs  dynamic_polling.rs  dynamic_retrieval.rs  dynamic_rollback.rs  dynamic_upstream_check.rs  dynamic_validation.rs  dynamic_version_check.rs  listener_mode.rs  provider_skeletons.rs  validation.rs  version_retrieval.rs  versioning.rs
crates/core/: Cargo.toml  README.md
crates/core/src/: connection.rs  enrichment.rs  error.rs  fingerprint.rs  fingerprinting.rs  http_date.rs  identifiers.rs  ipv6.rs  ipv6_mapped.rs  lib.rs  request.rs  request_headers.rs  upstream_protocol.rs  upstream_request.rs
crates/core/src/logging/: filtering.rs  levels.rs  mod.rs  structured.rs
crates/core/tests/: contexts.rs  identifiers.rs  ipv6.rs  logging_core.rs  request_headers.rs  runtime_logging.rs  upstream_protocol.rs  upstream_request.rs
crates/core/tests/common/: mod.rs
crates/fingerprinting/: Cargo.toml  README.md
crates/fingerprinting/src/: availability.rs  config.rs  headers.rs  interface.rs  ja4.rs  ja4one.rs  ja4t.rs  lib.rs  model.rs  orchestration.rs  propagation.rs  quic.rs  stats_integration.rs  tcp_data.rs  tls_data.rs  validation.rs
crates/fingerprinting/src/ja4one/: availability.rs  components.rs  protocol.rs  tcp_integration.rs  tls_integration.rs
crates/fingerprinting/src/ja4t/: availability.rs  complete.rs  partial.rs  unavailable.rs
crates/fingerprinting/src/tcp/: fallback.rs  mod.rs  os_specific.rs
crates/fingerprinting/tests/: ja4_corpus_harness.rs  ja4_corpus_manifest.rs  ja4_validation.rs  ja4one_validation.rs  ja4t_validation.rs  models_and_validation.rs  orchestration.rs  quic_fingerprinting.rs  runtime_propagation.rs  stats_integration.rs  tcp_data.rs
crates/grpc/: Cargo.toml
crates/grpc/src/: detection.rs  forward.rs  frames.rs  headers.rs  lib.rs
crates/grpc/tests/: detection.rs  forward.rs  frames.rs  headers.rs
crates/health/: Cargo.toml
crates/health/src/: endpoints.rs  lib.rs  liveness.rs  readiness.rs
crates/health/tests/: health.rs
crates/hpack/: Cargo.toml  README.md
crates/hpack/src/: error.rs  header.rs  huffman.rs  huffman_table.rs  integer.rs  lib.rs  string.rs  table.rs
crates/hpack/tests/: rfc7541_examples.rs
crates/http1/: Cargo.toml  README.md
crates/http1-orchestrator/: Cargo.toml
crates/http1-orchestrator/src/: lib.rs  message_assembler.rs  router.rs
crates/http1-orchestrator/tests/: message_assembler.rs  router_integration.rs
crates/http1/src/: lib.rs  request.rs  response.rs  serialize.rs  websocket_integration.rs
crates/http1/tests/: parsing_and_serialization.rs  websocket_integration.rs
crates/http2/: Cargo.toml  README.md
crates/http2-orchestrator/: Cargo.toml
crates/http2-orchestrator/src/: lib.rs  router.rs
crates/http2-orchestrator/tests/: router.rs
crates/http2/src/: cleartext.rs  connection.rs  conversion.rs  data.rs  flow_control.rs  frames.rs  grpc_integration.rs  headers.rs  lib.rs  request_decode.rs  request_map.rs  response_encode.rs  response_frames.rs  response_map.rs  settings.rs  stream_assembler.rs  streams.rs  tls.rs
crates/http2/tests/: cleartext.rs  (+13 more)
crates/http3/: Cargo.toml
crates/http3-orchestrator/: Cargo.toml
crates/http3-orchestrator/src/: lib.rs  router.rs
crates/http3-orchestrator/tests/: router.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: grpc.rs  http2.rs  http3.rs  ipv6.rs  multi_domain.rs  operational.rs  socket_activation.rs  stats_api.rs  websocket.rs
crates/pipeline/: Cargo.toml  README.md
crates/pipeline-modules/: Cargo.toml  README.md
crates/prepipeline/: Cargo.toml  README.md
crates/quic/: Cargo.toml
crates/stats/: Cargo.toml  README.md
crates/stats-api/: Cargo.toml
crates/stats-api/src/: access_control.rs  aggregation.rs  aggregation_validation.rs  endpoints.rs  interface.rs  lib.rs  network_restrictions.rs  rates.rs  restrictions.rs  sensitive_filter.rs  time_windows.rs  validation.rs
crates/stats-api/tests/: access_control_and_validation.rs
crates/tls-entry/: Cargo.toml
crates/tls-entry/src/: dispatcher.rs  handshake.rs  lib.rs
crates/tls-entry/tests/: dispatcher.rs  no_async_bridge.rs
crates/tls-termination/: Cargo.toml  README.md
crates/upstream/: Cargo.toml  README.md
crates/upstream/src/: http2.rs  http2_session.rs  ipv6.rs  ipv6_routing.rs  lib.rs  manager.rs  shutdown.rs
crates/upstream/src/pool/: config.rs  http1.rs  http2.rs  manager.rs  mod.rs  per_upstream.rs  timeouts.rs
crates/upstream/tests/: http2.rs  http2_session.rs  ipv6.rs  ipv6_routing.rs  manager.rs  pool_config.rs  pool_http1.rs  pool_http2.rs  pool_manager.rs  pool_per_upstream.rs  pool_timeouts.rs  shutdown.rs
crates/websocket/: Cargo.toml
crates/websocket/src/: bidirectional.rs  frames.rs  handshake.rs  lib.rs  proxy.rs  teardown.rs  upgrade.rs
crates/websocket/tests/: bidirectional.rs  frames.rs  handshake.rs  proxy.rs  upgrade.rs
docker/local/: bootstrap.toml  domain.toml  entrypoint.sh
docs/: compliance.md  deployment.md  implementation.md  operations.md  quickstart.md  security.md
testdata/ja4/: README.md  corpus-manifest.psv  raw-capture-baseline.psv  unsupported-artifact-baseline.psv  vectors.tsv
(+104 files in other folders)
