[package]
name = "fingerprint-proxy-core"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
tokio = { version = "1.35.1", features = ["rt-multi-thread", "macros", "time"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", default-features = false, features = ["env-filter", "fmt"] }
