[package]
name = "fingerprint-proxy-fingerprinting"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
fingerprint-proxy-core = { path = "../core" }
fingerprint-proxy-stats = { path = "../stats" }
sha2 = "0.10.8"

[dev-dependencies]
fingerprint-proxy-stats-api = { path = "../stats-api" }
