[package]
name = "fingerprint-proxy-http3-orchestrator"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
fingerprint-proxy-core = { path = "../core" }
fingerprint-proxy-http3 = { path = "../http3" }
fingerprint-proxy-pipeline = { path = "../pipeline" }
fingerprint-proxy-prepipeline = { path = "../prepipeline" }

