[package]
name = "fingerprint-proxy-stats-api"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
fingerprint-proxy-core = { path = "../core" }
fingerprint-proxy-bootstrap-config = { path = "../bootstrap-config" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
