[package]
name = "fingerprint-proxy-websocket"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
path = "src/lib.rs"

[dependencies]
base64 = "0.22"
fingerprint-proxy-core = { path = "../core" }
sha1 = "0.10"
tokio = { version = "1", features = ["io-util"] }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt", "io-util"] }
